@@ -1,3 +1,7 @@
+2012-10-25  Peter Faulkner <pjwf@hep.ph.bham.ac.uk>
+        * Tag as TrigT1CaloMonitoring-00-13-08
+        * Minor update to debug tool.
+
 2012-10-24  Peter Faulkner <pjwf@hep.ph.bham.ac.uk>
         * Tag as TrigT1CaloMonitoring-00-13-07
         * Update jobOptions.
